# LLM_vs_LR_stance_detection

./: pyproject.toml
LLM/: calc_ld_results.py  calc_md_results.py  ld.csv  ld_gpt.py  md.csv  md_gpt.py
LR/: classify_differing_entries.py  classify_lr.py  model.pkl  other_entries.tsv  vectorizer.pkl
data/: GWSD.tsv  find_most_diff.py  most_differing_entries.tsv
